cambio de imagen pokeshadow

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div data-pokecard class="poke-card">
         <div data-poke-name>Pokedex</div>
         <div data-poke-img-container class="img.container">
-            <img data-poke-img class="poke-img" src="img/pokemonshadow.jpeg" alt="sombra del pokemon">
+            <img data-poke-img class="poke-img" src="img/shadow.jpeg" alt="sombra del pokemon">
         </div>
         <div data-poke-id></div>
         <div data-poke-types class="poke-types"></div>
